# Backend

./: MyProfile.html  README.md  survey.html  test.html  test.py  test2.html  test2.py  태그사용.html
AWS/: readme.md
Admin_Project/: app.py  kream_crawling.py
Crawling/: melon_2.py  melon_m.py
DataAnalysis/: 01_Numpy.ipynb  02_pandas.ipynb  Titanic.ipynb  (+2 more)
Django/: pyproject.toml
Django/Django_1/config/: urls.py
Django/Django_1/feeds/: urls.py
Django/Django_2/: db.sqlite3
Django/Django_2/boards/: models.py
Django/Django_2/config/: settings.py
Django/Django_2/users/: models.py
Django/Django_3/: db.sqlite3  pyproject.toml
Django/Django_3/boards/: admin.py
Django/Django_3/config/: settings.py  urls.py
Django/Django_3/feeds/: admin.py  views.py
Django/Django_3/feeds/migrations/: 0001_initial.py
Django/Django_3/reviews/: models.py
Django/Django_3/users/: admin.py  urls.py  views.py
Django/Django_3/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
Django/Django_4/: pyproject.toml
Django/Django_4/boards/: models.py
Django/Django_4/boards/migrations/: 0001_initial.py  0002_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
Django/Django_4/common/: models.py
Django/Django_4/config/: authentication.py  settings.py
Django/Django_4/feeds/: models.py  serializers.py
Django/Django_4/reviews/: serializers.py  views.py
Django/Django_4/reviews/migrations/: 0001_initial.py
Django/Django_4/users/: serializers.py  urls.py  views.py
Django/config/: settings.py
Django/feeds/: views.py
(+142 files in other folders)
